# TITA

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  run_dpo.sh
benchmark/: run_benchmark.py
src/: inference.py  pope_eval.py  train_dpo_ours.py
src/configs/deepspeed/: zero3_offload.json
src/llava/model/: builder.py
src/llava/model/multimodal_encoder/: clip_encoder.py
src/tita_benchmarks/api/: __init__.py  benchmark.py  cli.py  evaluator.py
